Se agrega funcionalidad para conectarse a sqlite

--- a/infraestructure/database/config/config.yml
+++ b/infraestructure/database/config/config.yml
@@ -5,3 +5,5 @@ database:
     user: root
     password: root
     dbname: hexagonal
+  sqlite:
+    file: ./infraestructure/database/sqlite/hexagonal.sqlite
