--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,12 @@ go.work
 .DS_Store
 
 log.json
+
+
+
+### VisualStudioCode ###
+.vscode/*      # Maybe .vscode/**/* instead - see comments
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
